--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
      }
     h1 img {
       max-width: 100%;
-      height: auto;
+      height: 350px;
       display: block;
       margin-left: auto;   /* 좌우 마진을 자동으로 설정하여 중앙 정렬 */
       margin-right: auto;
