--- a/thai/index.html
+++ b/thai/index.html
@@ -111,7 +111,7 @@
     <div class="item-container"> <!--아사이볼-->
       <div class="item">
         <div class="arrow"></div>
-        <span class="item-name">Acai bowl </span>
+        <span class="item-name">อาซาอิโบวล์ </span>
         <span class="item-price">9,500 ₩</span>
       </div>
       <div class="description-wrapper">
@@ -126,7 +126,7 @@
     <div class="item-container"> <!--아사이 요거트 쉐이크-->
       <div class="item">
         <div class="arrow"></div>
-        <span class="item-name">Acai yogurt shake </span>
+        <span class="item-name">อาซาอิโยเกิร์ตเชค </span>
         <span class="item-price">6,500 ₩</span>
       </div>
       <div class="description-wrapper">
@@ -141,7 +141,7 @@
     <div class="item-container"> <!--아사이 라떼-->
       <div class="item">
         <div class="arrow"></div>
-        <span class="item-name">Iced Acai latte </span>
+        <span class="item-name">อาซาอิลาเต้เย็น </span>
         <span class="item-price">5,000 ₩</span>
       </div>
       <div class="description-wrapper">
@@ -156,7 +156,7 @@
      <div class="item-container"> <!--꿀 중의 꿀-->
       <div class="item">
         <div class="arrow"></div>
-        <span class="item-name">Honey of honey </span>
+        <span class="item-name">น้ำผึ้งแห่งน้ำผึ้ง </span>
         <span class="item-price">50,000 ₩</span>
       </div>
       <div class="description-wrapper">
@@ -175,6 +175,10 @@
     
       </div>
   </div>
+  <a href="https://tae8076.github.io/Noreunja-Menu/">
+      English
+    </a>
+&nbsp;
   <a href="https://tae8076.github.io/Noreunja-Menu/spanish/">
       Español
     </a>
@@ -185,10 +189,6 @@
 &nbsp;
   <a href="https://tae8076.github.io/Noreunja-Menu/chinese/">
       中文
-    </a>
-&nbsp;
-  <a href="https://tae8076.github.io/Noreunja-Menu/thai/">
-      ไทย
     </a>
 	
   <script>
